@@ -117,7 +117,11 @@ wxMSW:
 - Fixed generation of wxEVT_CHAR_HOOK events.
 - Implement wxFileName::SetTimes() for directories (Steve Lamerton).
 
+wxMac:
 
+- Fixed a problem with wxListCtrl whereby event processing would change
+  the event object identifier, and thereby affect subsequent processing,
+  and defeat custom event propagation of commands from current focus window.
 
 2.8.10:
 -------
